--- a/fruit/package.json
+++ b/fruit/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "happy",
+  "name": "test1807",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.12.1",
+    "antd-mobile": "^2.2.8",
     "axios": "^0.18.0",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "2.1.2",
+    "react-swipe": "^6.0.3",
     "redux": "^4.0.1",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
